# lp_optimize

./: .gitignore  README.md  pyproject.toml  requirements.txt  需求文档
cpp/: problem2_idle_on.cpp
docs/: 思路.md
examples/: demo.py
src/lp_optimize/: __init__.py  __main__.py  attitude.py  cli.py  filters.py  imu.py  io_csv.py  iri.py  metrics.py  parse_rawimusx.py  pipeline.py  plotting.py  preprocessing.py  profile.py  split_kelevt.py  split_raw.py
src/lp_optimize.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_basic.py  test_cli.py  test_plotting.py
